--- a/제이디:이정동/3주차/실습/week3_practice/week3_practice/Base.lproj/Main.storyboard
+++ b/제이디:이정동/3주차/실습/week3_practice/week3_practice/Base.lproj/Main.storyboard
@@ -67,7 +67,7 @@
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="filled" title="Segue"/>
                                         <connections>
-                                            <segue destination="7rf-y1-TeU" kind="show" identifier="segue" id="aNX-yP-nev"/>
+                                            <segue destination="7rf-y1-TeU" kind="presentation" identifier="segue" id="aNX-yP-nev"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yoy-Uu-uQV">
@@ -162,17 +162,17 @@
             <objects>
                 <viewController storyboardIdentifier="SecondVC" id="7rf-y1-TeU" customClass="SecondViewController" customModule="week3_practice" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="KHF-vs-UQq">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dfs-hL-KFo">
-                                <rect key="frame" x="174.66666666666666" y="415.33333333333331" width="43.666666666666657" height="21.666666666666686"/>
+                                <rect key="frame" x="174.66666666666666" y="410.33333333333331" width="43.666666666666657" height="21.666666666666686"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EKH-wf-eov">
-                                <rect key="frame" x="146.66666666666666" y="253" width="100" height="100"/>
+                                <rect key="frame" x="146.66666666666666" y="150" width="100" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="Alz-tk-hij"/>
                                     <constraint firstAttribute="width" secondItem="EKH-wf-eov" secondAttribute="height" multiplier="1:1" id="rGA-fG-iPr"/>
