--- a/제이디:이정동/4주차/실습/week4_practice/week4_practice/Base.lproj/Main.storyboard
+++ b/제이디:이정동/4주차/실습/week4_practice/week4_practice/Base.lproj/Main.storyboard
@@ -14,35 +14,29 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ScrollViewController" customModule="week4_practice" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="1000"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="1200"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xkT-cB-vZI">
-                                <rect key="frame" x="0.0" y="59" width="393" height="907"/>
+                                <rect key="frame" x="0.0" y="59" width="393" height="1107"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3LN-gz-N2D">
-                                        <rect key="frame" x="0.0" y="0.0" width="393" height="1120"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="490"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1번" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xbC-ex-KKP">
-                                                <rect key="frame" x="180" y="200" width="33" height="30"/>
+                                                <rect key="frame" x="180" y="100" width="33" height="30"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2번" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ipO-6e-Xsq">
-                                                <rect key="frame" x="178" y="430" width="37" height="30"/>
+                                                <rect key="frame" x="178" y="230" width="37" height="30"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3번" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YS8-Um-0gt">
-                                                <rect key="frame" x="178" y="660" width="37" height="30"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4번" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UEH-KM-bBJ">
-                                                <rect key="frame" x="177.66666666666666" y="890" width="38" height="30"/>
+                                                <rect key="frame" x="178" y="360" width="37" height="30"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -51,13 +45,11 @@
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
                                             <constraint firstItem="YS8-Um-0gt" firstAttribute="centerX" secondItem="3LN-gz-N2D" secondAttribute="centerX" id="5fJ-5W-UHZ"/>
-                                            <constraint firstItem="UEH-KM-bBJ" firstAttribute="top" secondItem="YS8-Um-0gt" secondAttribute="bottom" constant="200" id="9rx-OP-0Vo"/>
-                                            <constraint firstAttribute="bottom" secondItem="UEH-KM-bBJ" secondAttribute="bottom" constant="200" id="KNU-kx-bUj"/>
-                                            <constraint firstItem="YS8-Um-0gt" firstAttribute="top" secondItem="ipO-6e-Xsq" secondAttribute="bottom" constant="200" id="NH3-oD-NnY"/>
-                                            <constraint firstItem="UEH-KM-bBJ" firstAttribute="centerX" secondItem="3LN-gz-N2D" secondAttribute="centerX" id="Nx3-Oe-4N1"/>
-                                            <constraint firstItem="ipO-6e-Xsq" firstAttribute="top" secondItem="xbC-ex-KKP" secondAttribute="bottom" constant="200" id="Twn-RF-Ab4"/>
+                                            <constraint firstAttribute="bottom" secondItem="YS8-Um-0gt" secondAttribute="bottom" constant="100" id="KYg-a9-o0X"/>
+                                            <constraint firstItem="YS8-Um-0gt" firstAttribute="top" secondItem="ipO-6e-Xsq" secondAttribute="bottom" constant="100" id="NH3-oD-NnY"/>
+                                            <constraint firstItem="ipO-6e-Xsq" firstAttribute="top" secondItem="xbC-ex-KKP" secondAttribute="bottom" constant="100" id="Twn-RF-Ab4"/>
                                             <constraint firstItem="ipO-6e-Xsq" firstAttribute="centerX" secondItem="3LN-gz-N2D" secondAttribute="centerX" id="UX7-Ng-dUG"/>
-                                            <constraint firstItem="xbC-ex-KKP" firstAttribute="top" secondItem="3LN-gz-N2D" secondAttribute="top" constant="200" id="a7s-m5-Kti"/>
+                                            <constraint firstItem="xbC-ex-KKP" firstAttribute="top" secondItem="3LN-gz-N2D" secondAttribute="top" constant="100" id="a7s-m5-Kti"/>
                                             <constraint firstItem="xbC-ex-KKP" firstAttribute="centerX" secondItem="3LN-gz-N2D" secondAttribute="centerX" id="xeb-Ku-Hv6"/>
                                         </constraints>
                                     </view>
@@ -82,7 +74,7 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="xkT-cB-vZI" secondAttribute="bottom" id="maQ-Ki-cMr"/>
                         </constraints>
                     </view>
-                    <size key="freeformSize" width="393" height="1000"/>
+                    <size key="freeformSize" width="393" height="1200"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -92,7 +84,7 @@
         <scene sceneID="bIM-ge-XE7">
             <objects>
                 <viewController id="0lQ-dl-hRj" customClass="ViewController" customModule="week4_practice" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" ambiguous="YES" id="WWa-Ti-Y3c">
+                    <view key="view" contentMode="scaleToFill" id="WWa-Ti-Y3c">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -255,6 +247,51 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DDk-Uw-OaO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1661" y="-289"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="ZaS-aE-KUA">
+            <objects>
+                <viewController id="qKm-XO-bZv" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="RWv-Iu-tmK">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="1000"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XOZ-Rv-l6k">
+                                <rect key="frame" x="0.0" y="59" width="393" height="907"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1wf-TS-zCN">
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="800"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="800" id="EmW-tN-tIu"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="1wf-TS-zCN" firstAttribute="trailing" secondItem="GLq-FV-Pn7" secondAttribute="trailing" id="0Hs-ci-2OV"/>
+                                    <constraint firstItem="1wf-TS-zCN" firstAttribute="bottom" secondItem="GLq-FV-Pn7" secondAttribute="bottom" id="VGa-2Z-ZIV"/>
+                                    <constraint firstItem="1wf-TS-zCN" firstAttribute="width" secondItem="hjr-Yb-5Pt" secondAttribute="width" id="b0k-MW-IJh"/>
+                                    <constraint firstItem="1wf-TS-zCN" firstAttribute="top" secondItem="GLq-FV-Pn7" secondAttribute="top" id="bMj-JY-Z4B"/>
+                                    <constraint firstItem="1wf-TS-zCN" firstAttribute="leading" secondItem="GLq-FV-Pn7" secondAttribute="leading" id="ycx-G5-OiU"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="GLq-FV-Pn7"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="hjr-Yb-5Pt"/>
+                            </scrollView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="QRM-zS-qiI"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="QRM-zS-qiI" firstAttribute="trailing" secondItem="XOZ-Rv-l6k" secondAttribute="trailing" id="40a-q3-EzI"/>
+                            <constraint firstItem="XOZ-Rv-l6k" firstAttribute="top" secondItem="QRM-zS-qiI" secondAttribute="top" id="8hS-5D-2Ko"/>
+                            <constraint firstItem="QRM-zS-qiI" firstAttribute="bottom" secondItem="XOZ-Rv-l6k" secondAttribute="bottom" id="IiA-MW-lWR"/>
+                            <constraint firstItem="XOZ-Rv-l6k" firstAttribute="leading" secondItem="QRM-zS-qiI" secondAttribute="leading" id="S7R-BS-d0h"/>
+                        </constraints>
+                    </view>
+                    <size key="freeformSize" width="393" height="1000"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GQ8-BU-pNs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1568.7022900763359" y="533.80281690140851"/>
         </scene>
     </scenes>
     <resources>
