--- a/희:신예진/5주차/미션/UMC_fifthweekmission/Base.lproj/Main.storyboard
+++ b/희:신예진/5주차/미션/UMC_fifthweekmission/Base.lproj/Main.storyboard
@@ -38,33 +38,33 @@
                                 <rect key="frame" x="0.0" y="373.33333333333326" width="393" height="395.66666666666674"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="aH1-Hr-nCR">
-                                    <size key="itemSize" width="200" height="200"/>
+                                    <size key="itemSize" width="180" height="200"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="rbi-Oh-SDK" customClass="CollectionViewCell" customModule="UMC_fifthweekmission" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="100" height="150"/>
+                                        <rect key="frame" x="96.666666666666671" y="0.0" width="200" height="400"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="geP-wG-wQW">
-                                            <rect key="frame" x="0.0" y="0.0" width="100" height="150"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="vcH-fS-lnH">
+                                            <rect key="frame" x="0.0" y="0.0" width="200" height="400"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="l6k-gg-dbj">
-                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="l6k-gg-dbj" secondAttribute="height" multiplier="1:1" id="VPf-Ya-0LP"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="상품명" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oVr-2H-LEt">
-                                                    <rect key="frame" x="5" y="108" width="39" height="18"/>
+                                                    <rect key="frame" x="5" y="208" width="39" height="18"/>
                                                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NZi-yy-Rkk">
-                                                    <rect key="frame" x="68.333333333333329" y="105" width="26.666666666666671" height="26.666666666666657"/>
+                                                    <rect key="frame" x="168.33333333333334" y="205" width="26.666666666666657" height="26.666666666666657"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="NZi-yy-Rkk" secondAttribute="height" multiplier="1:1" id="k2Z-JZ-bx2"/>
                                                     </constraints>
@@ -74,17 +74,17 @@
                                                 </button>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="l6k-gg-dbj" firstAttribute="top" secondItem="geP-wG-wQW" secondAttribute="top" id="3db-NF-S93"/>
+                                                <constraint firstItem="l6k-gg-dbj" firstAttribute="top" secondItem="vcH-fS-lnH" secondAttribute="top" id="3db-NF-S93"/>
                                                 <constraint firstItem="oVr-2H-LEt" firstAttribute="top" secondItem="l6k-gg-dbj" secondAttribute="bottom" constant="8" id="3dh-Cq-bs4"/>
-                                                <constraint firstItem="oVr-2H-LEt" firstAttribute="leading" secondItem="geP-wG-wQW" secondAttribute="leading" constant="5" id="EVS-tL-mZk"/>
-                                                <constraint firstItem="oVr-2H-LEt" firstAttribute="leading" secondItem="geP-wG-wQW" secondAttribute="leading" constant="5" id="FiM-03-QBF"/>
+                                                <constraint firstItem="oVr-2H-LEt" firstAttribute="leading" secondItem="vcH-fS-lnH" secondAttribute="leading" constant="5" id="EVS-tL-mZk"/>
+                                                <constraint firstItem="oVr-2H-LEt" firstAttribute="leading" secondItem="vcH-fS-lnH" secondAttribute="leading" constant="5" id="FiM-03-QBF"/>
                                                 <constraint firstItem="NZi-yy-Rkk" firstAttribute="top" secondItem="l6k-gg-dbj" secondAttribute="bottom" constant="5" id="LIl-f0-mW3"/>
                                                 <constraint firstAttribute="trailing" secondItem="NZi-yy-Rkk" secondAttribute="trailing" constant="5" id="OfJ-Gf-9bt"/>
                                                 <constraint firstAttribute="trailing" secondItem="l6k-gg-dbj" secondAttribute="trailing" id="W0F-au-gyR"/>
-                                                <constraint firstItem="l6k-gg-dbj" firstAttribute="leading" secondItem="geP-wG-wQW" secondAttribute="leading" id="yec-AU-LGR"/>
+                                                <constraint firstItem="l6k-gg-dbj" firstAttribute="leading" secondItem="vcH-fS-lnH" secondAttribute="leading" id="yec-AU-LGR"/>
                                             </constraints>
                                         </collectionViewCellContentView>
-                                        <size key="customSize" width="100" height="150"/>
+                                        <size key="customSize" width="200" height="400"/>
                                         <connections>
                                             <outlet property="heartbtn" destination="NZi-yy-Rkk" id="TTl-Nc-z1q"/>
                                             <outlet property="image" destination="l6k-gg-dbj" id="cmj-a9-unG"/>
@@ -147,8 +147,19 @@
                     <view key="view" contentMode="scaleToFill" id="CFQ-DX-nYo">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="IMG_6307" translatesAutoresizingMaskIntoConstraints="NO" id="rmG-Dz-gAt">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="vyd-be-daA"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="rmG-Dz-gAt" secondAttribute="trailing" id="1Rm-Xk-kFa"/>
+                            <constraint firstAttribute="bottom" secondItem="rmG-Dz-gAt" secondAttribute="bottom" id="6L0-eb-chR"/>
+                            <constraint firstItem="rmG-Dz-gAt" firstAttribute="top" secondItem="CFQ-DX-nYo" secondAttribute="top" id="FGm-nk-V9J"/>
+                            <constraint firstItem="rmG-Dz-gAt" firstAttribute="leading" secondItem="CFQ-DX-nYo" secondAttribute="leading" id="jVG-dh-B9n"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Alaram" badgeValue="!" id="cks-2O-6ab">
                         <imageReference key="image" image="bell.fill" catalog="system" symbolScale="medium"/>
@@ -156,26 +167,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aaS-sZ-Svj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-44" y="699"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="N3S-vx-NKD">
-            <objects>
-                <viewController id="CrU-Lh-Nfd" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Zrq-tx-FwO">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="Edu-xS-idb"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="v83-xY-YD3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="717" y="-25"/>
+            <point key="canvasLocation" x="-45.038167938931295" y="698.59154929577471"/>
         </scene>
     </scenes>
     <resources>
         <image name="IMG_6302" width="1125" height="875"/>
+        <image name="IMG_6307" width="1125" height="1989"/>
         <image name="bell.fill" catalog="system" width="123" height="128"/>
         <image name="house" catalog="system" width="128" height="104"/>
         <image name="suit.heart" catalog="system" width="128" height="107"/>
