--- a/저림:임정현/7주차/미션/Week07_2/Week07_2/Base.lproj/Main.storyboard
+++ b/저림:임정현/7주차/미션/Week07_2/Week07_2/Base.lproj/Main.storyboard
@@ -61,8 +61,59 @@
             </objects>
             <point key="canvasLocation" x="130.53435114503816" y="-34.507042253521128"/>
         </scene>
+        <!--Login View Controller-->
+        <scene sceneID="LCm-Bz-lfU">
+            <objects>
+                <viewController storyboardIdentifier="LoginViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="8YX-fI-bwG" customClass="LoginViewController" customModule="Week07_2" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="fRv-EH-7h1">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="welcome_cat" translatesAutoresizingMaskIntoConstraints="NO" id="Y44-5h-VDh">
+                                <rect key="frame" x="60" y="148" width="272" height="253"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="253" id="ntU-sb-445"/>
+                                    <constraint firstAttribute="width" constant="272" id="ujs-dT-cTs"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Snj-0e-aRv">
+                                <rect key="frame" x="128" y="409" width="136" height="35"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Logout"/>
+                                <connections>
+                                    <action selector="pressLogout:" destination="8YX-fI-bwG" eventType="touchUpInside" id="i1m-bT-e6W"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="로그인 상태" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eOm-uz-7Vf">
+                                <rect key="frame" x="87" y="94" width="218" height="46"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Mu9-pL-kyh"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Mu9-pL-kyh" firstAttribute="trailing" secondItem="eOm-uz-7Vf" secondAttribute="trailing" constant="88" id="4Ld-k8-qTA"/>
+                            <constraint firstItem="Y44-5h-VDh" firstAttribute="leading" secondItem="Mu9-pL-kyh" secondAttribute="leading" constant="60" id="AC0-Uj-Azp"/>
+                            <constraint firstItem="eOm-uz-7Vf" firstAttribute="leading" secondItem="Mu9-pL-kyh" secondAttribute="leading" constant="87" id="M3P-17-mmM"/>
+                            <constraint firstItem="eOm-uz-7Vf" firstAttribute="top" secondItem="Mu9-pL-kyh" secondAttribute="top" constant="35" id="YG5-d5-YsJ"/>
+                            <constraint firstItem="Mu9-pL-kyh" firstAttribute="bottom" secondItem="eOm-uz-7Vf" secondAttribute="bottom" constant="678" id="cA5-H2-maI"/>
+                            <constraint firstItem="Mu9-pL-kyh" firstAttribute="bottom" secondItem="Snj-0e-aRv" secondAttribute="bottom" constant="374" id="cos-MT-Zfl"/>
+                            <constraint firstItem="Mu9-pL-kyh" firstAttribute="trailing" secondItem="Snj-0e-aRv" secondAttribute="trailing" constant="129" id="laM-0L-o9W"/>
+                            <constraint firstItem="Snj-0e-aRv" firstAttribute="leading" secondItem="Mu9-pL-kyh" secondAttribute="leading" constant="128" id="lz3-sp-7qu"/>
+                            <constraint firstItem="Mu9-pL-kyh" firstAttribute="trailing" secondItem="Y44-5h-VDh" secondAttribute="trailing" constant="61" id="vV5-ul-Ftx"/>
+                            <constraint firstItem="Y44-5h-VDh" firstAttribute="top" secondItem="eOm-uz-7Vf" secondAttribute="bottom" constant="8" id="wcA-QJ-sNa"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fAj-Hf-SN3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1006.8702290076335" y="-35.211267605633807"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="welcome_cat" width="612" height="612"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
